--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,11 @@
     <title>{{ page.title }}</title>
     <meta property="og:title" content="The Hack Day Manifesto" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://hackdaymanifesto.com/" />
+    <meta property="og:url" content="http://ayana.in/" />
     <meta property="og:image" content="" />
-    <meta property="og:site_name" content="The Hack Day Manifesto" />
-    <meta property="fb:admins" content="801305146" />
-    <meta itemprop="name" content="The Hack Day Manifesto">
-    <meta itemprop="description" content="So you’re organising a hack day or hackathon? Here are some basic requirements to make your event a success, and avoid the common pitfalls that could otherwise ruin it. If you cannot provide any of the following, make it clear to guests before registration. Attendees are generally forgiving when clear communication is given.">
+    <meta property="og:site_name" content="Ayana 12" />
+    <meta itemprop="name" content="Ayana 12">
+    <meta itemprop="description" content="Ayana is a two day technical event hosted at PESIT, Bangalore, featuring Technical talks by leading Open-Source contributors, and a ‘No-Talk-All-Action’ 24 hours Hackathon for the innovation enthusiasts.">
     <link rel="stylesheet" href="/media/css/reset.css">
     <link rel="stylesheet" href="/media/css/site.css">
     <!--[if lt IE 9]>
@@ -23,14 +22,12 @@
 <body>
     <article>
         {{ content }}
-        <a class="github" href="http://github.com/hackdaymanifesto/hackdaymanifesto.github.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
+        <a class="github" href="http://github.com/ayana12/ayana12.github.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
         <div class="share">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fhackdaymanifesto.com%2F&t=The+Hack+Day+Manifesto" target="_blank"><img src="http://sharenice.org/images/facebook_com.png" width="16" height="16"> Facebook</a>
-            <a href="https://twitter.com/intent/tweet?text=The%20Hack%20Day%20Manifesto%20%23hackdaymanifesto&url=http%3A%2F%2Fhackdaymanifesto.com%2F" target="_blank"><img src="http://sharenice.org/images/twitter_com.png" width="16" height="16"> Tweet</a>
-            <a href="https://plus.google.com/share?url=http%3A%2F%2Fhackdaymanifesto.com%2F&hl=en-US" target="_blank"><img src="http://sharenice.org/images/plus_google_com.png" width="16" height="16"> Google +1</a>
-            <a href="http://www.reddit.com/r/technology/comments/s2gcg/the_hack_day_manifesto/" target="_blank"><img src="http://sharenice.org/images/reddit_com.png" width="16" height="16"> Reddit</a>
-            <a href="http://news.ycombinator.com/item?id=3821900" target="_blank"><img src="http://ycombinator.com/favicon.ico" width="16" height="16"> Hacker News</a>
-        </div>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fayana.in%2F&t=Ayana+12" target="_blank"><img src="http://sharenice.org/images/facebook_com.png" width="16" height="16"> Facebook</a>
+            <a href="https://twitter.com/intent/tweet?text=Ayana%2012&url=http%3A%2F%2Fayana.in%2F" target="_blank"><img src="http://sharenice.org/images/twitter_com.png" width="16" height="16"> Tweet</a>
+            <a href="https://plus.google.com/share?url=http%3A%2F%2Fayana.in%2F&hl=en-US" target="_blank"><img src="http://sharenice.org/images/plus_google_com.png" width="16" height="16"> Google +1</a>
+       </div>
     </article>
     <footer>
         <p><small>&copy; 2012 <a href='http://creativecommons.org/licenses/by/3.0/'>SOME RIGHTS RESERVED</a></small></p>
