--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,15 @@
     <meta itemprop="description" content="Ayana is a two day technical event hosted at PESIT, Bangalore, featuring Technical talks by leading Open-Source contributors, and a ‘No-Talk-All-Action’ 24 hours Hackathon for the innovation enthusiasts.">
     <link rel="stylesheet" href="/media/css/reset.css">
     <link rel="stylesheet" href="/media/css/site.css">
+
+    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
+    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -20,6 +29,13 @@
     <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
+	<div class="navbar">
+	  <div class="navbar-inner">
+	    <div class="container">
+	      ...
+	    </div>
+	  </div>
+	</div>
     <article>
         {{ content }}
         <a class="github" href="http://github.com/ayana12/ayana12.github.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
