--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-	<div class="navbar">
+	<div class="navbar navbar-fixed-top">
 	  <div class="navbar-inner">
 	    <div class="container">
 	      ...
