--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,22 @@
 	<div class="navbar navbar-fixed-top">
 	  <div class="navbar-inner">
 	    <div class="container">
-	      ...
+	    	<div class="container">
+			          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			          </a>
+			          <a class="brand" href="#">Ayana 2012</a>
+			          <div class="nav-collapse">
+			            <ul class="nav">
+			              <li class="active"><a href="#">Home</a></li>
+			              <li><a href="#where">Where</a></li>
+			              <li><a href="#the_organizers">Organizers</a></li>
+			              <li><a href="#faqs">FAQs</a></li>
+			            </ul>
+			          </div><!--/.nav-collapse -->
+			        </div>
 	    </div>
 	  </div>
 	</div>
