--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 			              <li><a href="#faqs">FAQs</a></li>
 			            </ul>
 			          </div><!--/.nav-collapse -->
-			        </div>
+			   </div></div>
 	    </div>
 	  </div>
 	</div>
