--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,25 +30,24 @@
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
-	  <div class="navbar-inner">
-	    <div class="container">
-			          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			          </a>
-			          <a class="brand" href="#">Ayana 2012</a>
-			          <div class="nav-collapse">
-			            <ul class="nav">
-			              <li class="active"><a href="#">Home</a></li>
-			              <li><a href="#where">Where</a></li>
-			              <li><a href="#the_organizers">Organizers</a></li>
-			              <li><a href="#faqs">FAQs</a></li>
-			            </ul>
-			          </div><!--/.nav-collapse -->
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </a>
+	          <a class="brand" href="#">Project name</a>
+	          <div class="nav-collapse">
+	            <ul class="nav">
+	              <li class="active"><a href="#">Home</a></li>
+	              <li><a href="#about">About</a></li>
+	              <li><a href="#contact">Contact</a></li>
+	            </ul>
+	          </div><!--/.nav-collapse -->
+	        </div>
+	      </div>
 	    </div>
-	  </div>
-	</div>
     <article>
         {{ content }}
         <a class="github" href="http://github.com/ayana12/ayana12.github.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
