--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,12 +37,12 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </a>
-	          <a class="brand" href="#">Project name</a>
+	          <a class="brand" href="#">Ayana 2012</a>
 	          <div class="nav-collapse">
 	            <ul class="nav">
 	              <li class="active"><a href="#">Home</a></li>
-	              <li><a href="#about">About</a></li>
-	              <li><a href="#contact">Contact</a></li>
+	              <li><a href="#the_organizers">Organizers</a></li>
+	              <li><a href="#faqs">FAQs</a></li>
 	            </ul>
 	          </div><!--/.nav-collapse -->
 	        </div>
